# grizli

./: .flake8  .gitignore  .gitmodules  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  README.rst  environment.yml  environment_min.yml  grizli-for-dummies.md  grizli-for-dummies.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.md  test.rst  test_pipeline_hst.py
.github/workflows/: publish-to-pypi.yml  python-package-conda.yml  python-package-ero.yml  python-package-with-jwst.yml  python-package.yml
docs/: Basic-Sim.ipynb  Grizli Demo.ipynb  Notes_during_Roman_dev.txt  README.rst  conf.py  demo.py  grizli-for-dummies.rst  index.rst  multimission-simulation.ipynb  requirements.txt  rtd-pip-requirements
docs/grizli/: basic.rst  hst-data-v6.rst  image-release-v6.md  image-release-v6.rst  index.rst  install.rst  prep.rst
examples/: Basic-Sim.ipynb  Fit-Optimization.ipynb  Fit-with-Photometry.ipynb  Fitting-tools.ipynb  Grizli Demo.ipynb  Grizli-1D-spectra.ipynb  Grizli-Pipeline.ipynb  NIRISS-simulation.ipynb  NewSpectrumFits.ipynb  README.md  WFC3IR_Reduction.ipynb  demo.py  grizli_v1_database.ipynb  mirage-niriss.ipynb  multimission-simulation.ipynb
grizli/: __init__.py  auto_script.py  catalog.py  combine.py  conftest.py  constants.py  demo.py  ds9.py  fake_image.py  fitting.py  grism.py  grismconf.py  horizons.py  jwst.py  jwst_level1.py  jwst_outliers.py  jwst_utils.py  model.py  multifit.py  nbutils.py  post_install.py  prep.py  stack.py  upload_code_test.md  utils.py  version.py
grizli/aws/: __init__.py  api_cutout.py  aws_drizzler.py  db.py  define_mosaics.py  field_tiles.py  fit_redshift_lambda.py  horizons.py  lambda_handler.py  recalibrate.py  sky_wfss.py  tile_mosaic.py  utils.py  visit_processor.py
grizli/data/: README.hotpix.txt  auto_script_defaults.yml  cwi_badpix.py  db.yml  gaia_dr2_vizier_columns.txt  hst_encircled_energy.fits  hst_program_codes.csv  jwst_bp_info.yml  jwst_program_codes.csv  jwst_zeropoints.yml  nircam_edge_bpix.py  nircam_wisp.yml  photom_correction.yml  sep_catalog_junk.pkl  visit_alignment.txt  wfc3ir_ee.txt
grizli/data/CONF/: ACS.WFC.CHIP1.Stars.conf  ACS.WFC.CHIP2.Stars.conf  G102.F098M.V4.32.conf  G102.F105W.V4.32.conf  G102.F110W.V4.32.conf  G102.F125W.V4.32.conf  G102.F126N.V4.32.conf  G102.F127M.V4.32.conf  G102.F128N.V4.32.conf  G102.F130N.V4.32.conf  G102.F132N.V4.32.conf  G102.F139M.V4.32.conf  G102.F140W.V4.32.conf  G102.F153M.V4.32.conf  G102.F160W.V4.32.conf  G102.F164N.V4.32.conf  G102.F167N.V4.32.conf  G141.F098M.V4.32.conf  G141.F105W.V4.32.conf  G141.F110W.V4.32.conf  G141.F125W.V4.32.conf  G141.F126N.V4.32.conf  G141.F127M.V4.32.conf  G141.F128N.V4.32.conf  G141.F130N.V4.32.conf  G141.F132N.V4.32.conf  G141.F139M.V4.32.conf  G141.F140W.V4.32.conf  G141.F153M.V4.32.conf  G141.F160W.V4.32.conf  G141.F164N.V4.32.conf  G141.F167N.V4.32.conf  GD153_g102_A_sens.v1.fits  GD153_g102_C_sens.v1.fits  GD153_g102_D_sens.v1.fits  GD153_g141_A_sens.v1.fits  GD153_g141_C_sens.v1.fits  GD153_g141_D_sens.v1.fits  GD153_g141_E_sens.v1.fits  GD71_g102_A_sens.v0.fits  (+93 more)
grizli/data/CONF/GRISM_NIRCAM/: gNIRCAM.F250M.modA.C.conf  gNIRCAM.F250M.modA.R.+1.sens.fits  gNIRCAM.F250M.modA.R.+2.sens.fits  gNIRCAM.F250M.modA.R.conf  gNIRCAM.F250M.modB.C.conf  gNIRCAM.F250M.modB.R.+1.sens.fits  gNIRCAM.F250M.modB.R.+2.sens.fits  gNIRCAM.F250M.modB.R.conf  gNIRCAM.F277W.modA.C.conf  gNIRCAM.F277W.modA.R.+1.sens.fits  gNIRCAM.F277W.modA.R.+2.sens.fits  gNIRCAM.F277W.modA.R.conf  gNIRCAM.F277W.modB.C.+2.sens.fits  gNIRCAM.F277W.modB.C.conf  gNIRCAM.F277W.modB.R.+1.sens.fits  gNIRCAM.F277W.modB.R.conf  gNIRCAM.F300M.modA.C.+2.sens.fits  gNIRCAM.F300M.modA.C.conf  gNIRCAM.F300M.modA.R.+1.sens.fits  gNIRCAM.F300M.modA.R.conf  gNIRCAM.F300M.modB.C.conf  gNIRCAM.F300M.modB.R.+1.sens.fits  gNIRCAM.F300M.modB.R.+2.sens.fits  gNIRCAM.F300M.modB.R.conf  gNIRCAM.F322W2.modA.C.+1.sens.fits  gNIRCAM.F322W2.modA.C.+2.sens.fits  gNIRCAM.F322W2.modA.C.conf  gNIRCAM.F322W2.modA.R.conf  gNIRCAM.F322W2.modB.C.+2.sens.fits  gNIRCAM.F322W2.modB.C.conf  gNIRCAM.F322W2.modB.R.+1.sens.fits  gNIRCAM.F322W2.modB.R.conf  gNIRCAM.F335M.modA.C.+2.sens.fits  gNIRCAM.F335M.modA.C.conf  gNIRCAM.F335M.modA.R.+1.sens.fits  gNIRCAM.F335M.modA.R.conf  gNIRCAM.F335M.modB.C.+1.sens.fits  gNIRCAM.F335M.modB.C.+2.sens.fits  gNIRCAM.F335M.modB.C.conf  gNIRCAM.F335M.modB.R.conf  (+56 more)
grizli/data/CONF/wfss-grism-configuration/: NIRISS.GR150C.F090W.-1.etc.1.5.2.sens.fits  NIRISS.GR150C.F090W.2.etc.1.5.2.sens.fits  NIRISS.GR150C.F115W.1.etc.1.5.2.sens.fits  NIRISS.GR150C.F150W.-1.etc.1.5.2.sens.fits  NIRISS.GR150C.F150W.2.etc.1.5.2.sens.fits  NIRISS.GR150C.F200W.1.etc.1.5.2.sens.fits  NIRISS.GR150C.F200W.2.etc.1.5.2.sens.fits  NIRISS.GR150C.F200W.3.etc.1.5.2.sens.fits  NIRISS.GR150R.F090W.0.etc.1.5.2.sens.fits  NIRISS.GR150R.F090W.1.etc.1.5.2.sens.fits  (+10 more)
grizli/data/iref/: badpix_spars200_Nov9.fits  ir_wfc3_map.fits  w3m18525i_idc.fits
grizli/data/templates/: FeII_VeronCetty2004.txt  README  fsps_starburst_lines.txt  quasar_lines.txt  red_blue_continuum.txt  red_blue_continuum_noLya.txt  stars.npy  stars_bpgs.npy  stars_pickles.npy
grizli/galfit/: deconvolve.py  galfit.py  gfutils.py  psf.py
grizli/pipeline/: __init__.py  auto_script.py  default_params.py  photoz.py  reprocess.py  run_MPI.py  summary.py
grizli/tests/: test_autoscript.py  test_cutils.py  test_fits.py  test_grismconf.py  test_jwst.py  test_utils.py
grizli/tests/data/: fit_args.npy  j033216m2743_00152.beams.fits  niriss_jw01324001001_test.beams.fits
grizli/utils_c/: __init__.py  disperse.c  disperse.pyx  interp.c  interp.pyx
grizli/utils_numba/: disperse.py  interp.py
notebooks/: Extract_spectrum.ipynb  sim_star_field.ipynb  wavelength_dependent_psf.ipynb
(+16 files in other folders)
