[metadata]
name = grizli
author = G. Brammer
author_email = gbrammer@gmail.com
description = Grism redshift and line analysis software
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/gbrammer/grizli
license = MIT
license_files = LICENSE.txt
project_urls =
    Documentation = https://grizli.readthedocs.io/
    Source = https://github.com/gbrammer/grizli
    Tracker = https://github.com/gbrammer/grizli/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.7
install_requires =
    astro-prospector
    astropy
    astroquery
    astroscrappy
    descartes
    drizzlepac
    eazy
    extinction
    mastquery
    matplotlib
    numpy
    peakutils
    photutils
    # pyia
    # pyregion  # install fails for ubuntu in GitHub CI
    scikit-image
    scikit-learn
    scipy
    sep
    shapely
    specutils
    sregion
    stsci.tools
    stwcs
    tqdm
    tristars
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    flake8
docs =
    sphinx
    sphinx-astropy
jwst =
    jwst
    pysiaf
aws =
    awscli
    boto3
    psycopg2-binary
    sqlalchemy
hst = 
    reprocess-wfc3

[options.package_data]
grizli.data =
    *.yml
    *.txt
    *.fits
    *.fits.gz
grizli.data.templates =
    *
grizli.data.templates.fsps =
    *
grizli.data.templates.stars =
    *
grizli.tests.data =
    *

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1

[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[tool:pytest]
minversion = 5.0
norecursedirs = build docs/_build
testpaths =
    grizli/tests

[flake8]
exclude = *parsetab.py,conftest.py,docs/conf.py
