[metadata]
name = grizli
author = G. Brammer
author_email = gbrammer@gmail.com
description = Grism redshift and line analysis software
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/gbrammer/grizli
license = MIT
license_files = LICENSE.txt
project_urls =
    Documentation = https://grizli.readthedocs.io/
    Source = https://github.com/gbrammer/grizli
    Tracker = https://github.com/gbrammer/grizli/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.8
install_requires =
    astro-prospector
    astropy
    astroquery
    eazy>=0.8.3
    extinction
    mastquery>=1.8.1
    matplotlib
    numpy>=1.4
    numba
    photutils<1.13.0
    regions
    scikit-image>=0.20.0
    scikit-learn
    scipy>=1.6
    sep
    setuptools
    shapely
    sregion>=1.2.2
    stwcs
    tqdm
    tristars
    pillow<11.3
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    flake8
    drizzlepac<3.7.0
docs =
    sphinx
    sphinx-astropy
jwst =
    jwst<1.17
    pysiaf
    grismconf==1.32
    numba
    drizzlepac<3.7.0
    snowblind>=0.2.1
    crds<13.0
aws =
    awscli
    boto3
    psycopg2-binary
    sqlalchemy
hst =
    reprocess-wfc3
    astroscrappy
    drizzlepac<3.7.0
    stsci.tools
    wfc3tools

[options.package_data]
grizli.data =
    *.yml
    *.txt
    *.fits
    *.fits.gz
    *.csv
grizli.data.templates =
    *
grizli.data.templates.fsps =
    *
grizli.data.templates.stars =
    *
grizli.tests.data =
    *

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1

[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[tool:pytest]
minversion = 5.0
norecursedirs = build docs/_build
testpaths =
    grizli/tests

